[tool.poetry]
name = "inthon3"
version = "0.1.0"
description = ""
authors = ["Euizzang8001 <qkrdmlcks55@korea.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
pydantic = "^2.9.2"
pillow = "^11.0.0"
python-multipart = "^0.0.17"
boto3 = "^1.35.57"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
google-api-python-client = "^2.151.0"
google-auth-oauthlib = "^1.2.1"
jwt = "^1.3.1"
pyjwt = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
